@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PackageManifest Version="2.0.0" xmlns="http://schemas.microsoft.com/developer/vsx-schema/2011" xmlns:d="http://schemas.microsoft.com/developer/vsx-schema-design/2011">
     <Metadata>
-        <Identity Id="DotnetToolbar.B1B286CE-6848-4FA2-BE1C-2FFAE4F03685" Version="0.2.30" Language="en-US" Publisher="Carsten Riedel" />
+        <Identity Id="DotnetToolbar.B1B286CE-6848-4FA2-BE1C-2FFAE4F03685" Version="0.2.31" Language="en-US" Publisher="Carsten Riedel" />
         <DisplayName>DotnetToolbar</DisplayName>
         <Description xml:space="preserve">DotnetToolbar. dotnet build, dotnet pack, dotnet publish, dotnet nuget push</Description>
         <MoreInfo>https://github.com/carsten-riedel/Coree.VisualStudio.DotnetToolbar</MoreInfo>
